[gd_scene load_steps=18 format=3 uid="uid://brnn110syfndy"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_8bhti"]
[ext_resource type="Texture2D" uid="uid://bydfxox533j4j" path="res://assets/Hull_01.png" id="1_lei3t"]
[ext_resource type="Script" path="res://scenes/tank.gd" id="2_gdv81"]
[ext_resource type="Texture2D" uid="uid://b0c8qbebowob1" path="res://assets/Track_1_A.png" id="2_nq768"]
[ext_resource type="PackedScene" uid="uid://6wwegs823pqd" path="res://scenes/death_explosion.tscn" id="2_ukw48"]
[ext_resource type="Texture2D" uid="uid://c5dgy54pw5ce1" path="res://assets/Gun_01.png" id="3_jj67p"]
[ext_resource type="Script" path="res://scenes/player_gun.gd" id="4_dfy54"]
[ext_resource type="PackedScene" uid="uid://bp55dfjm4lc8" path="res://scenes/Progress.tscn" id="6_10d37"]
[ext_resource type="Script" path="res://scenes/Camera2D.gd" id="9_i2f2j"]
[ext_resource type="PackedScene" uid="uid://sbd0lmlaar6" path="res://healthcomponent.tscn" id="9_mesrs"]
[ext_resource type="Texture2D" uid="uid://dlpnlf8hbosxh" path="res://assets/health_bar/enemy_health_bar_background_000.png" id="10_i84d0"]
[ext_resource type="PackedScene" uid="uid://dekd87ku5lc0m" path="res://scenes/main_gun.tscn" id="10_u74a6"]
[ext_resource type="Texture2D" uid="uid://db8fjan82psbl" path="res://assets/health_bar/enemy_health_bar_foreground_000.png" id="11_xv5aw"]
[ext_resource type="Texture2D" uid="uid://lg6y71sh11lh" path="res://assets/health_bar/enemy_health_bar_000.png" id="12_1c2o6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1k40"]
size = Vector2(91, 126)

[sub_resource type="Animation" id="Animation_rs34t"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.721569, 0.721569, 0.721569, 1), Color(1, 0, 0, 1), Color(0.721569, 0.721569, 0.721569, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rdemg"]
_data = {
"hit": SubResource("Animation_rs34t")
}

[node name="Player" type="Node2D" node_paths=PackedStringArray("Health", "main_gun")]
modulate = Color(0.721569, 0.721569, 0.721569, 1)
script = ExtResource("1_8bhti")
Health = NodePath("HealthComponent")
death_explosion = ExtResource("2_ukw48")
main_gun = NodePath("Tank/MainGun")

[node name="Tank" type="Sprite2D" parent="." groups=["player"]]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_lei3t")
script = ExtResource("2_gdv81")

[node name="LeftTrack" type="Sprite2D" parent="Tank"]
show_behind_parent = true
texture_filter = 2
position = Vector2(-70, 5)
texture = ExtResource("2_nq768")

[node name="RightTrack" type="Sprite2D" parent="Tank"]
show_behind_parent = true
texture_filter = 2
position = Vector2(70, 5)
texture = ExtResource("2_nq768")

[node name="Gun" type="Sprite2D" parent="Tank"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.784314, 0.784314, 0.784314, 1)
texture_filter = 1
position = Vector2(0, 55)
texture = ExtResource("3_jj67p")
offset = Vector2(0, -55)
script = ExtResource("4_dfy54")

[node name="Marker2D" type="Marker2D" parent="Tank/Gun"]
position = Vector2(0, -160.76)

[node name="MainGun" parent="Tank" instance=ExtResource("10_u74a6")]
position = Vector2(0, 64)
scale = Vector2(1.4, 1.4)
texture = ExtResource("3_jj67p")
offset = Vector2(0, -50)
FIRE_RATE = 0.1
bullet_speed = 4500

[node name="Area2D" type="Area2D" parent="Tank" groups=["player"]]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tank/Area2D"]
visible = false
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_w1k40")

[node name="Camera2D" type="Camera2D" parent="Tank"]
unique_name_in_owner = true
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true
script = ExtResource("9_i2f2j")

[node name="HealthComponent" parent="." instance=ExtResource("9_mesrs")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" parent="CanvasLayer" instance=ExtResource("6_10d37")]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -27.0
offset_right = 91.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_right = 78.0
offset_bottom = 27.0
grow_horizontal = 2
value = 100.0

[node name="HealthB" type="TextureProgressBar" parent="CanvasLayer"]
unique_name_in_owner = true
texture_filter = 1
offset_right = 256.0
offset_bottom = 64.0
tooltip_text = "Health"
value = 100.0
texture_under = ExtResource("10_i84d0")
texture_over = ExtResource("11_xv5aw")
texture_progress = ExtResource("12_1c2o6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_rdemg")
}

[connection signal="area_entered" from="Tank/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Tank/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="hasDied" from="HealthComponent" to="." method="_on_health_component_has_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="animation_done" from="CanvasLayer/ProgressBar" to="Tank/Gun" method="_on_progress_bar_animation_done"]
